--- a/Weather.dproj
+++ b/Weather.dproj
@@ -5,7 +5,7 @@
         <FrameworkType>VCL</FrameworkType>
         <MainSource>Weather.dpr</MainSource>
         <Base>True</Base>
-        <Config Condition="'$(Config)'==''">Debug</Config>
+        <Config Condition="'$(Config)'==''">Release</Config>
         <Platform Condition="'$(Platform)'==''">Win32</Platform>
         <TargetedPlatforms>1</TargetedPlatforms>
         <AppType>Application</AppType>
@@ -60,6 +60,8 @@
         <DCC_K>false</DCC_K>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Base_Win32)'!=''">
+        <Icon_MainIcon>Weather_Icon.ico</Icon_MainIcon>
+        <AppEnableHighDPI>true</AppEnableHighDPI>
         <Manifest_File>$(BDS)\bin\default_app.manifest</Manifest_File>
         <VerInfo_Locale>1033</VerInfo_Locale>
         <DCC_Namespace>Winapi;System.Win;Data.Win;Datasnap.Win;Web.Win;Soap.Win;Xml.Win;Bde;$(DCC_Namespace)</DCC_Namespace>
@@ -80,6 +82,8 @@
         <DCC_RemoteDebug>true</DCC_RemoteDebug>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Cfg_1_Win32)'!=''">
+        <VerInfo_Locale>1033</VerInfo_Locale>
+        <VerInfo_IncludeVerInfo>true</VerInfo_IncludeVerInfo>
         <AppEnableHighDPI>true</AppEnableHighDPI>
         <AppEnableRuntimeThemes>true</AppEnableRuntimeThemes>
         <DCC_RemoteDebug>false</DCC_RemoteDebug>
@@ -100,9 +104,12 @@
         </DelphiCompile>
         <DCCReference Include="Weather.Main.pas">
             <Form>FormWeather</Form>
-            <FormType>dfm</FormType>
         </DCCReference>
         <DCCReference Include="Weather.Classes.pas"/>
+        <DCCReference Include="Weather.Settings.pas">
+            <Form>FormSettings</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
@@ -123,9 +130,26 @@
                 <Source>
                     <Source Name="MainSource">Weather.dpr</Source>
                 </Source>
+                <Excluded_Packages>
+                    <Excluded_Packages Name="C:\Users\Геннадий\Documents\Embarcadero\Studio\18.0\Bpl\RW_IB_D10_1_Dsgn.bpl">File C:\Users\Геннадий\Documents\Embarcadero\Studio\18.0\Bpl\RW_IB_D10_1_Dsgn.bpl not found</Excluded_Packages>
+                    <Excluded_Packages Name="C:\Users\Геннадий\Documents\Embarcadero\Studio\18.0\Bpl\RW_FD_D10_1_Dsgn.bpl">File C:\Users\Геннадий\Documents\Embarcadero\Studio\18.0\Bpl\RW_FD_D10_1_Dsgn.bpl not found</Excluded_Packages>
+                    <Excluded_Packages Name="C:\Users\Геннадий\Documents\Embarcadero\Studio\18.0\Bpl\RW_FDMongo_D10_1_Dsgn.bpl">File C:\Users\Геннадий\Documents\Embarcadero\Studio\18.0\Bpl\RW_FDMongo_D10_1_Dsgn.bpl not found</Excluded_Packages>
+                    <Excluded_Packages Name="C:\Users\Геннадий\Documents\Embarcadero\Studio\18.0\Bpl\RW_ADO_D10_1_Dsgn.bpl">File C:\Users\Геннадий\Documents\Embarcadero\Studio\18.0\Bpl\RW_ADO_D10_1_Dsgn.bpl not found</Excluded_Packages>
+                    <Excluded_Packages Name="C:\Users\Геннадий\Documents\Embarcadero\Studio\18.0\Bpl\RW_DBX_D10_1_Dsgn.bpl">File C:\Users\Геннадий\Documents\Embarcadero\Studio\18.0\Bpl\RW_DBX_D10_1_Dsgn.bpl not found</Excluded_Packages>
+                    <Excluded_Packages Name="C:\Users\Геннадий\Documents\Embarcadero\Studio\18.0\Bpl\RVMathD10_1_Dsgn.bpl">File C:\Users\Геннадий\Documents\Embarcadero\Studio\18.0\Bpl\RVMathD10_1_Dsgn.bpl not found</Excluded_Packages>
+                    <Excluded_Packages Name="C:\Users\Геннадий\Desktop\pascalscript-master\Dcu\D24\win32\PascalScript_Core_D24.bpl">File C:\Users\Геннадий\Desktop\pascalscript-master\Dcu\D24\win32\PascalScript_Core_D24.bpl not found</Excluded_Packages>
+                    <Excluded_Packages Name="$(BDSBIN)\dcloffice2k240.bpl">Microsoft Office 2000 Sample Automation Server Wrapper Components</Excluded_Packages>
+                    <Excluded_Packages Name="$(BDSBIN)\dclofficexp240.bpl">Microsoft Office XP Sample Automation Server Wrapper Components</Excluded_Packages>
+                </Excluded_Packages>
             </Delphi.Personality>
             <Deployment Version="3">
                 <DeployFile LocalName="Win32\Debug\Weather.exe" Configuration="Debug" Class="ProjectOutput">
+                    <Platform Name="Win32">
+                        <RemoteName>Weather.exe</RemoteName>
+                        <Overwrite>true</Overwrite>
+                    </Platform>
+                </DeployFile>
+                <DeployFile LocalName="Win32\Release\Weather.exe" Configuration="Release" Class="ProjectOutput">
                     <Platform Name="Win32">
                         <RemoteName>Weather.exe</RemoteName>
                         <Overwrite>true</Overwrite>
